# Repository-Template-Python

./: .gitignore  LICENSE  README.md  pr-description.md  rebase_init_branches.sh  setup.cfg  update_templates.sh
.config/: cspell.json
.config/dictionaries/: python.txt  workflow.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  pull_request_template.md  update_workflows.sh
.github/workflows/: linter.yml  pull_request.yml  release.yml  release_dry_run.yml  renovate_auto_approve.yml  slash_ops_command_help.yml  slash_ops_command_ready.yml  slash_ops_comment_dispatch.yml  spelling.yml  stale.yml  welcome_message.yml
tests/todo-my-fancy-project-name/: docker-compose-api.yml  docker-compose-infra.yml
