[metadata]
́́# TODO insert project name. Must match the name in the python-publish.yml workflow file
# TODO rename the directories in src/ and tests/ accordingly
name = todo-my-fancy-project-name
version = 1.0.0
author = Hapag-Lloyd AG
author_email = info@hlag.com
description = TODO insert project description
long_description = file: README.md
long_description_content_type = text/markdown
# TODO insert project homepage
url = https://github.com/Hapag-Lloyd/todo-my-fancy-project-name
project_urls =
# TODO insert project URLs
    Bug Tracker = https://github.com/Hapag-Lloyd/rds-proxy-password-rotation/issues
    repository = https://github.com/Hapag-Lloyd/rds-proxy-password-rotation
classifiers =
    Programming Language :: Python :: 3
# TODO insert project license
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# TODO insert python version
python_requires = >=3.10
install_requires =

[options.extras_require]
test =
    pytest==8.3.4
    pytest-cov==6.0.0

# TODO try running the tests without the following nose dependency first
    # updates an outdated dependency of local setup
    nose==1.3.7

[options.packages.find]
where = src
